# struct_perf

./: Cargo.toml  pyproject.toml
python/: struct_perf_timeit.py
python/struct_perf/: __init__.py
python/tests/: test_all.py
src/: lib.rs
